# MathLib

./: .gitignore  CMakeLists.txt  README.md
src/: Matrix.hpp  Point2.hpp  Point2D.hpp  Point3.hpp  Point3D.hpp  Vector3.hpp  angle.cpp  angle.hpp  main.cpp
tests/: main.cpp  test_angle.cpp  test_matrix.cpp  test_vector.cpp  unit_tests  utils.cpp  utils.hpp
